bootstrap and theme

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+// IMPORTARNT!!!
+// variables MUST be imported here to override bootstrap variables
+@import './themes/flatly/variables';
+
+// import boostrap and styles from other 3rd-party libraries
+@import '../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap';
+
+// import theme-specific styles
+@import './themes/flatly/bootswatch';
