--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,7 @@
-<p>
-  footer works!
-</p>
+<div>
+
+  <div class="container">
+    <p class="text-center">{{'&copy; ' + year + ' ' + appName + ' - All rights reserved'}}</p>
+  </div>
+
+</div>
