--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,3 +1,24 @@
-<p>
-  header works!
-</p>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" [attr.aria-expanded]="collapsed" (click)="collapsed = !collapsed">
+        <span class="sr-only">Toggle Menu</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" routerLink="/home">
+        {{appName}}
+        <span class="tagline">Selling Stuff Since Episode 1</span>
+      </a>
+    </div>
+
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li><a routerLink="spaceships" routerLinkActive="active">Catalog</a></li>
+      </ul>
+    </div>
+
+  </div>
+</nav>
