--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -10,13 +10,13 @@
       </button>
       <a class="navbar-brand" routerLink="/home">
         {{appName}}
-        <span class="tagline">Selling Stuff Since Episode 1</span>
+        <span class="tagline">{{appTagline}}</span>
       </a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a routerLink="spaceships" routerLinkActive="active">Catalog</a></li>
+        <li><a routerLink="spaceships" routerLinkActive="active">Spaceship Catalog</a></li>
       </ul>
     </div>
 
