--- a/src/app/products/components/grid/grid.component.scss
+++ b/src/app/products/components/grid/grid.component.scss
@@ -1,27 +1,28 @@
 .panel {
-    cursor: pointer;
     position: relative;
 
     figure {
         overflow: hidden;
         max-height: 375px;
-        margin-bottom: 15px;
         
         img {
+            width: 100%;
             transform: scale(1);
             transition: 300ms ease-in-out;
-            filter: grayscale(0%);
+            filter: grayscale(100%);
         }
 
     }
 
     &:hover figure img {
         transform: scale(1.3);
+        filter: grayscale(0%);
     }
 
-    img {
-        width: 100%;
-        filter: grayscale(100%);
+    .panel-title {
+        margin-bottom: 15px;
+        font-size: 18px;
+        font-weight: 400;
     }
 
 }
