minor style changes

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,6 @@
-<div>
+<div class="footer">
+
+  <hr/>
 
   <div class="container">
     <p class="text-center">{{'&copy; ' + year + ' ' + appName + ' - All rights reserved'}}</p>
