--- a/src/app/spaceships/components/spaceship-list/spaceship-list.component.html
+++ b/src/app/spaceships/components/spaceship-list/spaceship-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  spaceship-list works!
-</p>
+<div class="container">
+  <div class="page-header">
+    <h1>Spaceships</h1>
+  </div>
+  <app-product-list-view [products]="products"></app-product-list-view>
+</div>
