--- a/src/app/products/components/product-details-view/product-details-view.component.html
+++ b/src/app/products/components/product-details-view/product-details-view.component.html
@@ -1,5 +1,6 @@
 <div class="product-details">
-  <div class="container">
+
+  <div class="container" *ngIf="product">
   
     <div class="page-header">
       <h1>
@@ -43,4 +44,9 @@
     </div>
 
   </div>
+
+  <div class="text-center" *ngIf="!product">
+    <img src="assets/img/spinner.svg" />
+  </div>
+
 </div>
