--- a/src/app/shared/components/page-not-found/page-not-found.component.html
+++ b/src/app/shared/components/page-not-found/page-not-found.component.html
@@ -1,3 +1,9 @@
-<p>
-  page-not-found works!
-</p>
+<div class="page-not-found">
+  <div class="container text-center">
+    
+    <i class="fa fa-frown-o text-muted"></i>
+    <br/>
+    <h1>Page Not Found</h1>
+
+  </div>
+</div>
