--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -16,7 +16,7 @@
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a routerLink="spaceships" routerLinkActive="active">Spaceship Catalog</a></li>
+        <li><a routerLink="spaceships" routerLinkActive="active">Spaceships</a></li>
       </ul>
     </div>
 
