improvements to header and footer

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -3,7 +3,12 @@
   <hr/>
 
   <div class="container">
-    <p class="text-center">{{'&copy; ' + year + ' ' + appName + ' - All rights reserved'}}</p>
+    <p class="text-center">
+      {{'&copy; ' + year + ' ' + appName}} 
+      <span class="hidden-xs"> - </span>
+      <br class="visible-xs" />
+      All rights reserved.
+    </p>
   </div>
 
 </div>
