--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -8,7 +8,6 @@
     line-height: 24px;
     padding: 20px;
     color: #fff !important;
-    background-color: $navbar-default-link-active-bg !important;
     text-shadow: none;
     transition: all 150ms ease-in-out;
 
@@ -32,6 +31,10 @@
 
 }
 
-.navbar-nav li .active {
+.navbar-default .navbar-nav li .active {
     background-color: rgba($navbar-default-link-active-bg, 0.1);
+}
+
+.navbar-inverse .navbar-nav li .active {
+    background-color: rgba($navbar-inverse-link-active-bg, 0.1);
 }
