--- a/src/app/products/components/list/list.component.html
+++ b/src/app/products/components/list/list.component.html
@@ -1,15 +1,3 @@
 <ng-template ngFor let-product [ngForOf]="products" let-i="index">
-  <hr *ngIf="i"/>
-  <div class="media">
-    <div class="media-left">
-      <img [attr.src]="product.picture || 'http://facetheforce.today/random/400?r=' + product.id" />
-    </div>
-    <div class="media-body">
-      <h3 class="media-heading">{{product.name}}</h3>
-      <p class="lead">{{product.price || 'N/A'}}</p>
-    </div>
-    <div class="media-right">
-      <a [routerLink]="product.id" class="btn btn-primary">View Details</a>
-    </div>
-  </div>
+  <app-products-list-item [product]="product" [delay]="i*50" [index]="i"></app-products-list-item>
 </ng-template>
