some style changes

--- a/src/app/products/components/product-details-view/product-details-view.component.html
+++ b/src/app/products/components/product-details-view/product-details-view.component.html
@@ -31,7 +31,7 @@
           <ng-template ngFor let-spec [ngForOf]="specs" let-i="index">
             <div class="row">
               <div class="col-xs-5">
-                <strong>{{spec.label}}</strong>
+                <p><strong>{{spec.label}}</strong></p>
               </div>
               <div class="col-xs-7">
                 <p>{{spec.value || 'N/A'}}</p>
