improvements to list and details views

--- a/src/app/spaceships/components/spaceship-details/spaceship-details.component.html
+++ b/src/app/spaceships/components/spaceship-details/spaceship-details.component.html
@@ -1,8 +1,8 @@
 <div>
   <app-products-details-view 
-    *ngIf="product"
-    [product]="product" 
-    [category]="product.class" 
+    *ngIf="spaceship"
+    [product]="spaceship" 
+    [category]="spaceship.category" 
     [specs]="specs">
   </app-products-details-view>
 </div>
