--- a/src/app/spaceships/components/spaceship-list/spaceship-list.component.html
+++ b/src/app/spaceships/components/spaceship-list/spaceship-list.component.html
@@ -2,5 +2,5 @@
   <div class="page-header">
     <h1>Spaceships</h1>
   </div>
-  <app-products-list-view [products]="products"></app-products-list-view>
+  <app-products-list-view [products]="spaceships"></app-products-list-view>
 </div>
