--- a/src/app/products/components/product-details-view/product-details-view.component.html
+++ b/src/app/products/components/product-details-view/product-details-view.component.html
@@ -14,8 +14,11 @@
       <div class="col-sm-7">
         
         <section>
-          <img [attr.src]="product.picture || 'http://facetheforce.today/random/400?r=1'" class="product-image" />
-          <p>Thrawn jar skywalker antilles hutt jabba ventress hutt tatooine. Darth jinn skywalker grievous darth. Qui-gon amidala luuke jabba windu. Mandalore utapau calamari windu amidala lars ahsoka antilles han. Kamino antilles antilles jinn greedo cade skywalker. Chewbacca moff cade kessel darth utapau hutt skywalker twi'lek. Luke yavin darth calamari qui-gonn skywalker wedge ahsoka. Watto tatooine palpatine droid k-3po darth. Organa kashyyyk antilles solo padmé coruscant chewbacca k-3po. Organa fett moff obi-wan hutt dooku.</p>
+          <div class="product-image">
+            <app-products-image-viewer [images]="product.pictures"></app-products-image-viewer>
+          </div>
+          <h3>Description:</h3>
+          <p>{{product.description}}</p>
         </section>
 
       </div>
@@ -27,7 +30,7 @@
         <br/>
 
         <aside>
-          <h3>Tech Specs</h3>
+          <h3>Tech Specs:</h3>
           <ng-template ngFor let-spec [ngForOf]="specs" let-i="index">
             <div class="row">
               <div class="col-xs-5">
