--- a/src/app/products/components/list-item/list-item.component.html
+++ b/src/app/products/components/list-item/list-item.component.html
@@ -3,7 +3,7 @@
   <div class="media">
     <div class="media-left">
       <figure>
-        <img [attr.src]="product.picture || 'assets/img/no-img.jpg'" />
+        <img [attr.src]="product.pictures[0] || 'assets/img/no-img.jpg'" />
       </figure>
     </div>
     <div class="media-body">
