expand / collapse menu

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,7 +14,7 @@
       </a>
     </div>
 
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse" [ngClass]="{ 'in': !collapsed }">
       <ul class="nav navbar-nav">
         <li><a routerLink="spaceships" routerLinkActive="active">Spaceships</a></li>
       </ul>
