--- a/src/app/products/components/grid-item/grid-item.component.scss
+++ b/src/app/products/components/grid-item/grid-item.component.scss
@@ -3,7 +3,7 @@
 
     figure {
         overflow: hidden;
-        max-height: 375px;
+        min-height: 200px;
         
         img {
             width: 100%;
