--- a/src/app/products/components/list-item/list-item.component.scss
+++ b/src/app/products/components/list-item/list-item.component.scss
@@ -5,8 +5,7 @@
         overflow: hidden;
         
         img {
-            width: 70px;
-            height: 70px;
+            height: 100%;
             background: url('/assets/img/spinner.svg') no-repeat 50% 50% #eee;
             background-size: 50px auto;
             transform: scale(1);
