--- a/src/app/products/components/list-item/list-item.component.scss
+++ b/src/app/products/components/list-item/list-item.component.scss
@@ -1,13 +1,14 @@
 .media {
 
     figure {
+        width: 70px;
         height: 70px;
         overflow: hidden;
+        background: url('/assets/img/spinner.svg') no-repeat 50% 50% #eee;
+        background-size: 50px auto;
         
         img {
-            height: 100%;
-            background: url('/assets/img/spinner.svg') no-repeat 50% 50% #eee;
-            background-size: 50px auto;
+            width: 100%;
             transform: scale(1);
             filter: grayscale(100%);
             transition: 400ms ease-in-out;
