last-minute changes

--- a/src/app/products/components/product-details-view/product-details-view.component.html
+++ b/src/app/products/components/product-details-view/product-details-view.component.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="row">
-      <div class="col-sm-7">
+      <div class="col-md-8">
         
         <section>
           
@@ -54,7 +54,7 @@
         </section>
 
       </div>
-      <div class="col-sm-5">
+      <div class="col-md-4">
 
         <div class="product-price hidden-xs">
           <small>Price</small>
@@ -75,6 +75,8 @@
               </div>
             </div>
           </ng-template>
+          <br/>
+          <button type="button" class="btn btn-primary btn-block">Buy</button>
         </aside>
 
       </div>
